# BadUIBattles

./: README.md  node.gitignore  nodeinit.bat  nodeinit.sh
MetaOptimizedMemeCalculator/: README.md  build.gradle  settings.gradle
MetaOptimizedMemeCalculator/src/main/java/ai/arcblroth/phumor/metacalculator/: MetaOptimizedMemeCalculator.java
MetaOptimizedMemeCalculator/src/test/java/ai/arcblroth/phumor/metacalculator/: CalculatorTest.java
colosseum/: external-sources.md  index.js  package-lock.json  package.json  run.bat
colosseum/web/: cheeseburger.html  engine.js  index.html  index.js  load.css  stylesheet.css
colosseum/web/css/: cheeseburger.css  load.css  prologue-highlighting.css  prologue.css  stylesheet.css
colosseum/web/js/: engine.js  index.js  level.js  load.js  util.js
colosseum/web/js/levels/: prologue.js
colosseum/web/mapdata/: captcha.xml  prologue.xml  testing-room.xml
deitytyper/: .gitignore  README.md  index.js  package-lock.json  package.json
deitytyper/model/: main.py  model.json  pyproject.toml
deitytyper/web/: index.html  index.js  stylesheet.css
goldmine/: README.md  index.js  package-lock.json  package.json
goldmine/web/: index.html  index.js  stylesheet.css
java/: .gitignore  build.gradle  settings.gradle
quarantine/: README.md  index.js  package-lock.json  package.json
quarantine/web/: cannon.glb  client.js  index.html  sars-cov-2.fasta  stylesheet.css
templates/html/: index.html  index.js  stylesheet.css
templates/java/: .gitignore  build.gradle  settings.gradle
(+2 files in other folders)
