[tool.poetry]
name = "deitytyper"
version = "1.0.0"
description = "because python is apparently the language of ml"
authors = ["Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.2.0"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
tensorflow-datasets = "^3.1.0"
tensorflowjs = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
